broken logo element on Safari fixed

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -36,6 +36,7 @@
             width: 100%;
             text-align: center;
             bottom: 3px;
+            left: 0;
         }
     }
 
